--- a/header.css
+++ b/header.css
@@ -1,4 +1,4 @@
-
+/* 
 
 header {
     position: relative;
@@ -7,7 +7,7 @@ header {
     padding: 10px 0;
     text-align: center;
 }
-#user-icon {
+ #user-icon {
     position: absolute;
     top: 10px;
     left: 10px;
@@ -23,7 +23,7 @@ header {
 }
 header {
     position: relative;
-}
+} 
 
 
 .register-button,
@@ -69,29 +69,10 @@ h1 {
     font-size: 24px;
 }
 
-
-
-input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
-    border: 2px solid #c75bb8;
-    border-radius: 5px;
-    width: 300px;
-}
-
-input[type="submit"] {
-    background-color: #c75bb8;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-}
 #user-greeting {
     position: absolute;
     top: 10px;
     left: 10px;
     font-size: 16px;
     color: #333;
-}
+} */
